# PantryPilot

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .secrets.toml  BACKEND_TUTORIAL.md  CHANGELOG_3.0.0.md  FRONTEND_SCAFFOLDING_TUTORIAL.md  IMPLEMENTATION_IMAGE_UPLOAD.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_ADD_BY_URL.md  MANUAL_TESTING_AUTH.md  MANUAL_TESTING_IMAGE_UPLOAD.md  Makefile  PHOTO_UPLOAD_IMPLEMENTATION.md  README.md  codecov.yml  config.json  config.json.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
apps/backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.acr  README.md  mypy.ini  pyproject.toml
apps/backend/scripts/: analyze_token_lengths.py  backfill_embeddings.py  create_dev_user.py  export_training_data.py  run_pytest.sh  upload_training_data.py
apps/backend/src/: __init__.py  alembic.ini  app.py  main.py
apps/backend/src/alembic/: env.py
apps/backend/src/alembic/versions/: 20250827_00_initial_schema.py  20250827_01_extend_meal_history_for_planning.py  20250827_02_adjust_meal_history_nullable_fields.py  20250827_03_add_difficulty_to_recipes.py  20250902_04_tighten_users_username_and_names.py  20250905_05_add_user_ownership_and_admin_role.py  20250907_06_add_user_preferences_table.py  20251130_08_add_is_verified_to_users.py  20251212_07_add_ai_drafts_table.py  20260109_09_add_description_and_oven_temp_to_recipes.py  20260115_10_add_chat_conversations_and_messages.py  20260115_11_add_chat_pending_actions_and_tool_calls.py  20260115_12_add_user_memory_documents.py  20260115_13_add_location_fields_to_user_preferences.py  20260120_14_add_recipe_embeddings.py  20260123_15_ensure_extensions.py  20260129_16_add_title_updated_at.py  20260130_17_add_ai_training_samples.py  20260131_18_add_embedding_model_tracking.py
apps/backend/src/api/v1/: ai.py  api.py  auth.py  chat.py  chat_user_memory_doc.py  feedback.py  grocery_lists.py  health.py  mealplans.py  recipes.py  user_profile.py
apps/backend/src/core/: config.py  email.py  error_handler.py  exceptions.py  middleware.py  observability.py  ratelimit.py  scheduler.py  security.py  security_config.py
apps/backend/src/crud/: ai_drafts.py  grocery_lists.py  user.py  user_preferences.py
apps/backend/src/dependencies/: auth.py  db.py
apps/backend/src/dev/: __init__.py  pydanticai_ui.py
apps/backend/src/models/: __init__.py  ai_drafts.py  ai_training_samples.py  base.py  chat_conversations.py  chat_messages.py  chat_pending_actions.py  chat_tool_calls.py  ingredient_names.py  meal_history.py  recipe_ingredients.py  recipes_names.py  user_memory_documents.py  user_preferences.py  users.py
apps/backend/src/schemas/: ai.py  ai_training_samples.py  api.py  auth.py  chat_content.py  chat_streaming.py  chat_tools.py  grocery_lists.py  ingredients.py  mealplans.py  recipes.py  user.py  user_memory_document.py  user_preferences.py
apps/backend/src/services/: __init__.py  chat_agent.py  chat_retention.py  chat_summarization.py  chat_title_generator.py  context_generator.py  deduplication_service.py  embedding_service.py  geocoding.py  memory_update.py  weather.py  web_fetch.py  web_search.py
apps/backend/src/services/ai/: __init__.py  agents.py  draft_service.py  exceptions.py  extraction_common.py  extraction_pipeline.py  html_extractor.py  image_orchestrator.py  interfaces.py  markdown_converter.py  markdown_extractor.py  model_factory.py  models.py  orchestrator.py  url_orchestrator.py
apps/backend/src/services/chat_agent/: __init__.py  agent.py  deps.py  schemas.py  training_capture.py
apps/backend/src/services/chat_agent/tools/: __init__.py  meal_history.py  meal_proposals.py  web.py  (+4 more)
apps/backend/src/services/images/: normalize.py
apps/backend/src/training/: __init__.py  generate_conversations.py  personas.py  query_templates.py  seed_database.py
apps/backend/src/training/dapt/: README.md  __init__.py  create_corpus.py  download_foodcom.py  extract_flavor_pairs.py  process_foodcom.py  process_openrecipes.py  upload_to_azure.py
apps/backend/tests/: conftest.py  new_conftest.py  test_ai_extraction.py  test_ai_stream_order.py  test_auth.py  test_auth_edge_cases.py  test_auth_flows.py  test_auth_register.py  test_authorization_integration.py  test_authorization_simple.py  test_chat_actions.py  test_chat_agent.py  test_chat_conversation_history.py  test_chat_message_history.py  test_chat_retention.py  test_chat_schemas.py  test_chat_streaming.py  test_chat_summarization_policy.py  test_chat_time_context.py  test_chat_tool_stream_events.py  test_chat_training_data_helpers.py  test_chat_truncate_sse.py  test_cors_security.py  test_email.py  test_error_handler_unit.py  test_error_handling.py  test_feedback_api.py  test_geocoding_timezone.py  test_grocery_lists_api.py  test_health.py  test_html_extractor_attributes.py  test_html_extractor_ssrf.py  test_image_normalize.py  test_ingredient_prep_normalization.py  test_ingredients_schema.py  test_main.py  test_mealplans_api.py  test_memory_update_service.py  test_observability.py  test_recipes.py  (+10 more)
apps/backend/tests/ai/: test_api_extract_image.py  test_api_extract_nonstream.py  test_api_extract_stream.py  test_conversion.py  test_draft_tokens.py  test_exceptions_unit.py  test_html_extractor.py  test_markdown_converter.py  test_markdown_extractor.py  test_models_unit.py  test_orchestrator_image_extraction.py  test_schema_models.py
apps/backend/tests/core/: test_error_response_builder_unit.py  test_ratelimit.py  test_structured_logger_unit.py
apps/backend/tests/fixtures/: ai_fixtures.py
apps/backend/tests/fixtures/ai/: recipes.py
apps/backend/tests/services/: test_chat_agent.py  test_chat_agent_tools.py  test_chat_title_generator.py  test_context_generator.py  test_deduplication_service.py  test_embedding_service.py  test_meal_proposal_tool.py  test_memory_tool.py  test_model_factory.py  test_web_tool.py
apps/backend/tests/services/chat_agent/: test_training_capture.py
apps/backend/tests/training/: test_dapt.py  test_generate_conversations.py  test_personas.py  test_seed_database.py
(+385 files in other folders)
