[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.136.0",
    "uvicorn>=0.42.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "pyjwt[crypto]>=2.12.1",
    "argon2-cffi>=25.1.0",
    "pydantic-settings>=2.10.1",
    "protobuf>=6.32.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.0",
    "pydantic-ai-slim[google,openai]>=1.84.1",
    "openai>=1.109.1",
    "pillow>=11.3.0",
    "azure-communication-email>=1.1.0",
    "itsdangerous>=2.2.0",
    "upstash-ratelimit>=1.1.0",
    "upstash-redis>=1.7.0",
    "timezonefinder>=6.0.0",
    "markdownify>=1.2.2",
    "pgvector>=0.4.2",
    "numpy>=2.4.3",
    "google-genai>=1.69.0",
    "apscheduler>=3.11.2",
    "azure-monitor-opentelemetry>=1.8.2",
    "opentelemetry-api>=1.38,<1.39",
    "opentelemetry-sdk>=1.38,<1.39",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.15.8",
    "mypy>=1.14.2",
    "python-json-logger>=2.0.4",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.0",
    "tiktoken>=0.8.0",
]
dapt = [
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "kaggle>=1.6.0",
    "azure-ai-ml>=1.22.0",
    "azure-identity>=1.19.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C90", # mccabe complexity
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["backend"]
combine-as-imports = true
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "src"]
addopts = "--cov=src --cov-report=term --cov-report=html"

[tool.coverage.run]
omit = [
    "src/training/dapt/*",
    "src/training/seed_database.py",
    "src/training/generate_conversations.py",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["upstash_ratelimit", "upstash_redis", "timezonefinder"]
ignore_missing_imports = true
